--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,12 @@ html{
     padding: 0;
 }
 
+
+.iceland-regular {
+  
+}
+
+
 .logo{
     cursor: pointer;
     background-color: black;
@@ -50,7 +56,8 @@ header ul nav{
 }
 
 li a{
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-family: "Iceland", sans-serif;
+font-style: normal;
 font-weight: 500;
 font-size: 1rem;
 color: white;
@@ -81,8 +88,8 @@ body{
     min-width: 20rem;
     margin: 0 auto;
     color: white;
-    font-family: poppins;
-    font-size: 1rem;
+    font-family: "iceland";
+    font-size: 1.5rem;
     line-height: 1.6;
     background-image: url(../media/white-lightning.jpeg);
     background-attachment: fixed;
@@ -105,8 +112,17 @@ figure {
     max-width: 500px;
     height: auto;
     
+    
 }
 
+img{
+    border-radius: 8%;
+}
+
+.about-me{
+    margin:auto;
+    padding:1rem;
+}
  
     @media only screen and (min-width: 768px) {
         .element {
