--- a/country-dungeon/css/lore.css
+++ b/country-dungeon/css/lore.css
@@ -14,7 +14,7 @@ body {
     min-height: 100vh; 
     display: flex; 
     flex-direction: column;
-    background-image: url(/images/dungeon-map1.png);
+    background-image: url(/country-dungeon/images/dungeon-map1.png);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
